# tstest

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: GitSubmodules.cmake  sanitizers.cmake
tstest/: CMakeLists.txt  TODO.md
tstest/include/: README.md
tstest/include/tstest/: tstest.hpp  version.hpp  version.hpp.in
tstest/include/tstest/core/: algorithm.hpp  assertor.hpp  context.hpp  defs.hpp  event.hpp  event_list.hpp  event_log.hpp  event_queue.hpp  exception.hpp  operation.hpp  runner.hpp
tstest/include/tstest/details/: algorithm.hpp  annotations.hpp  assertor.hpp  context.hpp  defs.hpp  event.hpp  event_log.hpp  exception.hpp  mutex.hpp  runner.hpp
tstest/include/tstest/utility/: annotations.hpp  mutex.hpp
tstest/src/: .keep
tstest/tests/: CMakeLists.txt  main.cpp  test_event_queue.cpp  test_tstest.cpp
tstest/tests/test_core/: test_algorithm.cpp  test_assertor.cpp  test_context.cpp  test_event.cpp  test_event_list.cpp  test_event_log.cpp  test_runner.cpp
tstest/tests/test_details/: test_algorithm.cpp  test_assertor.cpp  test_context.cpp  test_event.cpp  test_event_log.cpp  test_runner.cpp
